[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/models/main character/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/models/Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/models/Floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/models/Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/models/Interruptor.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/levels/Level1.gd" type="Script" id=6]
[ext_resource path="res://scenes/models/TransportVehicle.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/levels/Level2.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/models/Lava.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/models/level objects/muro invisible.tscn" type="PackedScene" id=10]

[node name="Level1" type="Node2D"]
pause_mode = 2
script = ExtResource( 6 )

[node name="Platform" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 719.815, 413.95 )

[node name="Platform2" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 289.213, 330.715 )

[node name="Platform3" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 472.804, 190.889 )

[node name="Platform4" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 670.25, 103.821 )

[node name="Floor" parent="." instance=ExtResource( 3 )]
position = Vector2( 177.433, 568.862 )
scale = Vector2( 3.05506, 2.61704 )

[node name="Floor2" parent="." instance=ExtResource( 3 )]
position = Vector2( 909.131, 223.444 )
scale = Vector2( -2.08555, 5.24815 )

[node name="Floor3" parent="." instance=ExtResource( 3 )]
position = Vector2( 110.432, 180.471 )
scale = Vector2( 1.8293, 2.82954 )

[node name="Floor4" parent="." instance=ExtResource( 3 )]
position = Vector2( 916.055, 508.401 )
scale = Vector2( 1.8074, 2.61704 )

[node name="Door" parent="." instance=ExtResource( 4 )]
position = Vector2( 819.117, 412.562 )
scale = Vector2( 4, 4 )

[node name="Door2" parent="." instance=ExtResource( 4 )]
position = Vector2( 817.711, 98.7892 )
scale = Vector2( 4, 4 )

[node name="Interruptor" parent="." instance=ExtResource( 5 )]
position = Vector2( 32.0659, 55.7285 )
scale = Vector2( 1.46148, 1.53358 )

[node name="Interruptor2" parent="." instance=ExtResource( 5 )]
position = Vector2( 963.654, 145.715 )
scale = Vector2( 1.46148, 1.53358 )

[node name="TransportVehicle" parent="." instance=ExtResource( 7 )]
position = Vector2( 947.214, 465.324 )
scale = Vector2( 3, 3 )
next_scene = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 1 )]
pause_mode = 1
position = Vector2( 190.675, 459.721 )

[node name="Lava" parent="." instance=ExtResource( 9 )]
position = Vector2( 690.304, 590.705 )
scale = Vector2( 47.9596, 13.5966 )

[node name="muro invisible" parent="." instance=ExtResource( 10 )]

[node name="muro invisible2" parent="." instance=ExtResource( 10 )]
position = Vector2( 1028.13, 270.352 )

[node name="muro invisible3" parent="." instance=ExtResource( 10 )]
position = Vector2( 261.79, -25.0945 )
rotation = 1.5708

[node name="muro invisible4" parent="." instance=ExtResource( 10 )]
position = Vector2( 764.996, -25.0945 )
rotation = 1.5708
